
CREATE TABLE IF NOT EXISTS organisation
(
    id TEXT primary key,
    name TEXT NOT NULL
);
